# my_robot

./: README.md  main.py  pyproject.toml
cogs/: ai.py  bilibili.py  fun.py  translate.py  video.py  weather.py
utils/: updown_bilibili.py
