[project]
name = "my-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "discord-py>=2.6.4",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "tencentcloud-sdk-python>=3.1.19",
    "yt-dlp>=2025.12.8",
]
